fix alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,17 @@ header {
   text-align: center;
 }
 
+@media (max-width: 800px) {
+  header {
+    text-align: right;
+  }
+
+  #header-text {
+    text-align: center;
+    padding-right: 0.7em;
+  }
+}
+
 #header-text {
   display: inline-block;
 
